--- a/src/components/cv-form/StepsProgress.css
+++ b/src/components/cv-form/StepsProgress.css
@@ -3,6 +3,7 @@
     height: 60px;
     margin: auto;
     margin-top: 20px;
+    margin-bottom: 20px;
     border-radius: 25px;
 	box-shadow: 0 30px 60px 0 rgba(90, 116, 148, 0.4);
     border: solid 1px rgba(90, 116, 148, 0.4);
